<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context="com.bumbumapps.stylishtext.fragments.BubbleFragment">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textSize="14sp"
        android:textColor="@color/colorText"
        android:text="@string/text6" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="5dp"
        android:textColor="@android:color/holo_red_light"
        android:text="@string/text7"
        android:textSize="18sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:textColor="@android:color/holo_red_light"
        android:text="@string/text8"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/floatingbutton"
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_2"
        android:text="Floating Bubble" />


</LinearLayout>