<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:fitsSystemWindows="true"
    android:orientation="vertical">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorBackground"
            android:theme="@style/MyThemeOverlay_Toolbar"
            app:titleTextColor="@color/colorText" />

    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:scrollbars="none"
        android:scrollingCache="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginBottom="10dp"
                    android:text="@string/text1"
                    android:textColor="@color/grey_2"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:textColor="#FFC107"
                    android:layout_marginBottom="10dp"
                    android:text="@string/text2"
                    android:textSize="18sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name"
                android:src="@drawable/image1" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/text3"
                    android:textColor="#FFC107"
                    android:layout_marginBottom="10dp"
                    android:textSize="18sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="153dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name"
                android:src="@drawable/image2" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/text4"
                    android:textColor="#FFC107"
                    android:layout_marginBottom="10dp"
                    android:textSize="18sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="483dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name"
                android:src="@drawable/image3" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/text5"
                    android:textColor="#FFC107"
                    android:layout_marginBottom="10dp"
                    android:textSize="18sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="126dp"
                android:layout_marginBottom="10dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name"
                android:src="@drawable/image4" />
            </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
